Changes in version 0.0.7

+ FIX: error check for positive definite in `add_population_error`

+ UPDATE: better ML population error in `add_population_error` (update from {bifactor})


Changes in version 0.0.6

+ MOVE: `add_wording_effects` methods moved from `utils-latentFactoR` to `add_wording_effects-helpers` to facilitate ease of finding code (no observable changes to the user)

+ FIX: categories greater than 7 were not previously allowed (they are now)

+ FIX: correlations in `EKC` were not used appropriately and led to an error

+ UPDATE: switched on "Byte-Compile" (byte-compiles on our end and not when the user installs)


Changes in version 0.0.5

+ FIX: bug in skew when only providing 1 value

+ FIX: further correction to `EKC` (uses `cumsum(eigenvalues)` rather than `sum(eigenvalues)`)

+ ADD: `add_wording_effects` will add wording effects such as acquiescence, difficulty, random careless, straight line, or some combination of the four to a simulated factor model

+ ADD: `ESEM` to perform Exploratory Structural Equation Modeling using {lavaan} (allows wording effects to be estimated)

+ FIX: `factor_forest` uses raw data in `psych::fa.parallel` rather than correlation matrix

+ ADD: internal functions for computing effect sizes across conditions are included (see `simulation_helpers.R`)

+ ADD: skew in `add_local_dependence` is guaranteed to be same direction for locally dependent variables


Changes in version 0.0.4

+ FIX: correction to `EKC` (used `factor_forest`'s version of EKC which used reference values rather than eigenvalues); `EKC` uses eigenvalues whereas `factor_forest` uses reference (which was what the random forest model was trained on)

+ FIX: cross-loadings with population error are screened for communalities >= 0.80; communalities near 0.90 prior to population error would often get stuck and not converge

+ ADD: `skew` argument for continuous data


Changes in version 0.0.3
