@@ -4,6 +4,10 @@ Changes in version 0.0.7
 
 + UPDATE: better ML population error in `add_population_error` (update from {bifactor})
 
++ UPDATE: some optimizations to `add_population_error` 
+
++ UPDATE: some optimiztaions to `NEST`
+
 
 Changes in version 0.0.6
 
